--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h2>Html Forms</h2>
 
-<form action="action_page,php> 
+<form action=""> 
   <label for="fname">Primeiro nome:</label><br>
   <input type="text" id="fname" name="fname" value="Icaro"><br>
   <label for="lname">Sobrenome:</label><br>
