--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <h2>Html Forms</h2>
 
-<form action=""> 
+<form action="teste.html"> 
   <label for="fname">Primeiro nome:</label><br>
   <input type="text" id="fname" name="fname" value="Icaro"><br>
   <label for="lname">Sobrenome:</label><br>
